# abc-notation

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: example.py  parse_dataset.py  parse_esac.py
src/abc_notation/: body.py  symbols.py  tune.py
src/abc_notation/fields/: abstract_fields.py  key.py  meter.py  string_fields.py  tempo.py  unit_note_length.py
src/abc_notation/parsing/: calclex.py  parser.py  parsing.py  token_names.py
tests/: test_body.py  test_fields.py  test_parser.py  test_tune.py
